GNOME Bugzilla – Bug 740190
Void function 'gkd_login_clear_password' should not return a value
Last modified: 2014-11-20 20:14:58 UTC
We should replace g_return_val_if_reached with g_return_if_reached to prevent compilation error in daemon/login/gkd-login.c when using clang.
Created attachment 290770 [details] [review] Fix "void function should not return a value" error for clang
Thanks! Attachment 290770 [details] pushed as f59fb06 - Fix "void function should not return a value" error for clang