Fix "void function should not return a value" error for clang

https://bugzilla.gnome.org/show_bug.cgi?id=740190